<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/layout_settings"
    android:layout_marginTop="0dp"
    tools:context=".DoctorSettingsFragment">

    <ScrollView
        android:id="@+id/scrol"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <TextView
                android:id="@+id/tv_UPPER_dName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_shape"
                android:fontFamily="serif"
                android:padding="8dp"
                android:text="Settings and More"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/bnv_Main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:titleTextColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/layout_shape"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imgSettings"
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:padding="0dp"
                    android:src="@drawable/settings" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/blue2" />

                <TextView
                    android:id="@+id/account_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.9"
                    android:drawablePadding="20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:text="Account Settings"
                    android:textAlignment="textStart"
                    android:textColor="#121111"
                    android:textSize="16sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_shape"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imgAboutUs"
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:padding="0dp"
                    android:src="@drawable/about_us" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/blue2" />

                <TextView
                    android:id="@+id/txt_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.9"
                    android:drawablePadding="20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:text="@string/about_us"
                    android:textAlignment="textStart"
                    android:textColor="#121111"
                    android:textSize="16sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_shape"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imgQuestions"
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:padding="0dp"
                    android:src="@drawable/question" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/blue2" />

                <TextView
                    android:id="@+id/txt_common_questions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.9"
                    android:drawablePadding="20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:text="@string/common_questions"
                    android:textAlignment="textStart"
                    android:textColor="#121111"
                    android:textSize="16sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_shape"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:padding="0dp"
                    android:src="@drawable/share2" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/blue2" />

                <TextView
                    android:id="@+id/txt_share_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.9"
                    android:drawablePadding="20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:text="@string/share_app"
                    android:textAlignment="textStart"
                    android:textColor="#121111"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_shape"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:padding="0dp"
                    android:src="@drawable/star" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/blue2" />

                <TextView
                    android:id="@+id/txt_rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.9"
                    android:drawablePadding="20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:text="@string/evaluation_app"
                    android:textAlignment="textStart"
                    android:textColor="#121111"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/layout_shape"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:padding="0dp"
                    android:src="@drawable/error" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/blue2" />

                <TextView
                    android:id="@+id/txt_tell_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.9"
                    android:drawablePadding="20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:onClick="telling_an_error"
                    android:paddingEnd="10dp"
                    android:text="@string/telling_issue"
                    android:textAlignment="textStart"
                    android:textColor="#121111"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="15dp"
                android:src="@drawable/app_name" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>